# robotics-task-planner

./: .gitignore  README.md  create_logs.sh  instructions.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: settings.yaml
src/core/: __init__.py  code_generator.py  task_planner.py
src/simulation/: __init__.py  robot_actions.py  robot_environment.py  textures.py
src/ui/: app.py
src/utils/: error_handler.py
tests/: test_code_generator.py  test_simulation.py  test_task_planner.py
